# microservices-python

./: .gitignore  README.md
common/: pyproject.toml
common/common/: utils.py
common/common/ports/: listing_service_port.py  port.py  user_service_port.py
common/common/types/: __init__.py  schemas.py
listing-service/: README.md  listing_service.py
public-service/: .env  main.py  pyproject.toml
public-service/public_service/: api.py  app.py  database.py  routes.py  schemas.py  service.py  settings.py
public-service/public_service/adapters/: adapter.py  listing_service_adapter.py  user_service_adapter.py
user-service/: main.py  pyproject.toml
user-service/user_service/: __init__.py  app.py  database.py  model.py  routes.py  schemas.py  service.py  utils.py
