[tool.poetry]
name = "common"
version = "0.1.0a"
description = ""
authors = ["syauqylei <syauqilenterano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.3"
structlog = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
